--- a/car.html
+++ b/car.html
@@ -19,9 +19,12 @@
 </head>
 <body>
 
+  <button type="button" id="myBtn2" class="btn btn-danger btn-lg">Set</button><br><br>
+  <button type="button" id="btnLocal" class = "hidden">Local</button>
 <div class="container">
   <!-- <button type="button" id="myBtn" class="btn btn-success btn-lg" id="myBtn">Slide through items (cycle)</button>-->
-  <button type="button" id="myBtn2" class="btn btn-danger btn-lg">Set</button><br><br>
+
+  <br><br>
   <div id="myCarousel" class="carousel slide" data-interval="2000">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -35,12 +38,12 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <img src="jack-spades.png" alt="Jake Spade" width="460" height="345">
-        <div class="container">
+        <!-- <div class="container">
         <div class="carousel-caption">
-          <!-- <p><a class="btn btn-lg btn-primary" href="http://getbootstrap.com">Set Me</a>-->
+          <p><a class="btn btn-lg btn-primary" href="http://getbootstrap.com">Set Me</a>
           <p><a class="btn btn-lg btn-primary" id="btn1">Set Me</a>
         </p></div>
-      </div>
+      </div>-->
       </div>
 
       <div class="item">
@@ -69,18 +72,25 @@
 </div>
 
 <script>
+var count = 0;
 $(document).ready(function(){
     // Activate Carousel
-    $("#myCarousel").carousel("cycle");
+    //$("#myCarousel").carousel("cycle");
+    //count++;
+    //count = count % 4;
 
     // Click on the button to start sliding
-    $("#myBtn").click(function(){
+    /*$("#myBtn").click(function(){
         $("#myCarousel").carousel("cycle");
-    });
+    });*/
 
     // Click on the button to stop sliding
     $("#myBtn2").click(function(){
-        $("#myCarousel").carousel("pause");
+
+      $("#myCarousel").carousel("pause");
+      console.log("paused");
+      //$("#btnLocal").style.display="block";
+      document.getElementsByClassName("hidden").style.display="inline";
     });
     /*$("btn1").click(function(){
         $("#myCarousel").carousel("pause");
@@ -103,9 +113,13 @@ $(document).ready(function(){
     // Enable Carousel Controls
     $(".left").click(function(){
         $("#myCarousel").carousel("prev");
+        if(count == 0) count = 3;
+        else count--;
     });
     $(".right").click(function(){
         $("#myCarousel").carousel("next");
+        count++;
+        count = count % 4;
     });
 });
 </script>
