--- a/car.html
+++ b/car.html
@@ -19,11 +19,14 @@
 </head>
 <body>
 
-  <button type="button" id="myBtn2" class="btn btn-danger btn-lg">Set</button><br><br>
-  <button type="button" id="btnLocal" class = "hidden">Local</button>
-<div class="container">
-  <!-- <button type="button" id="myBtn" class="btn btn-success btn-lg" id="myBtn">Slide through items (cycle)</button>-->
 
+  <div class="container">
+  <!-- <button type="button" id="myBtn" class="btn btn-success btn-lg" id="myBtn">Slide through items (cycle)</button>-->
+  <button type="button" id="myBtn2" class="btn btn-danger btn-lg">Set</button><br><br>
+  <input type = "button" id = "btnLocal" value = "Local" style="display: none;">
+  <input type = "button" id = "btnDist" value = "Distributed" style="display: none;">
+  <input type = "button" id = "btnGT" value = "Hybrid" style="display: none;"><br>
+  <input type = "button" id = "btnLocalSave" value = "Save Again" style="display: none;">
   <br><br>
   <div id="myCarousel" class="carousel slide" data-interval="2000">
     <!-- Indicators -->
@@ -73,6 +76,10 @@
 
 <script>
 var count = 0;
+//var hiddenitem = document.getElementById("btnLocal");
+//console.log(hiddenitem);
+//hiddenitem.style.display="block";
+
 $(document).ready(function(){
     // Activate Carousel
     //$("#myCarousel").carousel("cycle");
@@ -89,8 +96,21 @@ $(document).ready(function(){
 
       $("#myCarousel").carousel("pause");
       console.log("paused");
-      //$("#btnLocal").style.display="block";
-      document.getElementsByClassName("hidden").style.display="inline";
+      /*.right.carousel-control, .left.carousel-control {
+        display: none;
+      }*/
+
+      document.getElementById("btnLocal").style.display="inline";
+      document.getElementById("btnDist").style.display="inline";
+      document.getElementById("btnGT").style.display="inline";
+    });
+
+    $("#btnLocal").click(function(){
+      console.log("Local Pressed");
+      document.getElementById("btnLocal").style.display="none";
+      document.getElementById("btnDist").style.display="none";
+      document.getElementById("btnGT").style.display="none";
+      document.getElementById("btnLocalSave").style.display="inline";
     });
     /*$("btn1").click(function(){
         $("#myCarousel").carousel("pause");
