--- a/car.html
+++ b/car.html
@@ -76,20 +76,14 @@
 
 <script>
 var count = 0;
-//var hiddenitem = document.getElementById("btnLocal");
-//console.log(hiddenitem);
-//hiddenitem.style.display="block";
 
 $(document).ready(function(){
     // Activate Carousel
-    //$("#myCarousel").carousel("cycle");
+    $("#myCarousel").carousel("cycle");
     //count++;
     //count = count % 4;
+    //console.log(count);
 
-    // Click on the button to start sliding
-    /*$("#myBtn").click(function(){
-        $("#myCarousel").carousel("cycle");
-    });*/
 
     // Click on the button to stop sliding
     $("#myBtn2").click(function(){
@@ -112,9 +106,6 @@ $(document).ready(function(){
       document.getElementById("btnGT").style.display="none";
       document.getElementById("btnLocalSave").style.display="inline";
     });
-    /*$("btn1").click(function(){
-        $("#myCarousel").carousel("pause");
-    });*/
 
     // Enable Carousel Indicators
     $(".item1").click(function(){
@@ -131,16 +122,26 @@ $(document).ready(function(){
     });
 
     // Enable Carousel Controls
-    $(".left").click(function(){
+    /*$(".left").click(function(){
         $("#myCarousel").carousel("prev");
         if(count == 0) count = 3;
         else count--;
+        console.log(count);
     });
     $(".right").click(function(){
         $("#myCarousel").carousel("next");
         count++;
         count = count % 4;
-    });
+        console.log(count);
+    });*/
+
+    //capture slide move event
+
+    $("#myCarousel").on('slid.bs.carousel', function () {
+       count++;
+       count = count % 4;
+       console.log(count);
+   });
 });
 </script>
 
