--- a/local.html
+++ b/local.html
@@ -12,58 +12,56 @@
   </head>
 
   <body>
-    <header>
+    <!--<header>
       <div class="container">
         <div id="branding">
-          <h1>Local Data Storage</h1>
         </div>
         <nav>
           <ul>
-            <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='control.html';">
+            <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='car.html';">
           </ul>
         </nav>
       </div>
-    </header>
+    </header>-->
     <section id="newsletter">
       <div class="container">
         <div class="buttonHolder">
-          <!--<input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='control.html';">-->
+          <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='car.html';">
           <br><br>
-          <input type = "email" placeholder="Enter A Color" id = "txtNameLocal"
+          <!--<input type = "email" placeholder="Enter A Color" id = "txtNameLocal"
        onkeydown = "if (event.keyCode == 13)
                         document.getElementById('btnSubmit').click()">
 
-          <input type = "button" id = "btnSubmit" value = "Submit" onclick = "showHideLocal();"><br> <br>
-          <input type = "button" id = "btnLocalSave" value = "Save Again" class = "hiddenLocalButton">
+          <input type = "button" id = "btnSubmit" value = "Submit" onclick = "showHideLocal();"><br> <br>-->
+          <input type = "button" id = "btnLocalSave" value = "Save Again" style="display: block;">
         </div>
       </div>
     </section>
 
     <div id="outer">
     <br><br><br>
-    <section class="borderexamplelocaldist" id="data_zone">
-
-    </section>
-    <br>
-    <section class="borderexamplelocaldist" id="data_zone2">
+    <!--<section class="borderexamplelocaldist" id="data_zone">-->
+    <section id="data_zone">
 
     </section>
     </div>
     <script>
-      document.getElementById("btnSubmit").style.display="none";
-      document.getElementById("data_zone2").style.display="none";
-      var gotName = localStorage.getItem("storageName");
-      $('#data_zone').prepend('<strong><center><font size="6", face="Arial, Helvetica,sans-serif", color="#ffffff">' + gotName + '</font></center></strong>');
-      //$('#data_zone').innerHTML = '<p><strong>' + gotName + '</strong></p>';
-
-      /*$('#btnLocalSave').click(function () {
-        //this is actually add, not save
-        document.getElementById("btnLocalSave").style.display="none";
-        document.getElementById("txtNameLocal").style.display="none";
-        document.getElementById("data_zone2").style.display="block";
-        var color = document.getElementById("txtNameLocal").value;
-        $('#data_zone2').prepend('<p><strong>' + color + '</strong></p>');
-      })*/
+      //document.getElementById("btnSubmit").style.display="none";
+      //document.getElementById("data_zone2").style.display="none";
+      var gotName = localStorage.getItem("storageCountLocal");
+      //$('#data_zone').prepend('<strong><center><font size="6", face="Arial, Helvetica,sans-serif", color="#ffffff">' + gotName + '</font></center></strong>');
+      if(gotName == 0){
+        document.querySelector('#data_zone').innerHTML = '<img id="img0" src="jack-spades.png" />';
+      }
+      else if(gotName == 1){
+        document.querySelector('#data_zone').innerHTML = '<img id="img1" src="jack_dimond.jpg" />';
+      }
+      else if(gotName == 2){
+        document.querySelector('#data_zone').innerHTML = '<img id="img2" src="queen.jpg" />';
+      }
+      else if(gotName == 3){
+        document.querySelector('#data_zone').innerHTML = '<img id="img3" src="queen_spades.jpg" />';
+      }
 
         $('#btnLocalSave').click(function () {
           //this is actually add, not save
@@ -75,8 +73,5 @@
           document.querySelector('#data_zone').innerHTML = '<strong><center><font size="6", face="Arial, Helvetica,sans-serif", color="#ffffff">' + color + '</font></center></strong>';
           })
     </script>
-    <footer>
-      Cisco Hyperinnovation Living Labs (CHILL)
-    </footer>
     </body>
 </html>
